[project]
name = "call-analytics-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aioboto3>=15.1.0",
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
    "openai>=1.101.0",
    "python-json-logger>=3.3.0",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]
